# ESP32-DAPLink

./: .gitignore  air103_usb.txt  dap.cfg  partitions.csv  sdkconfig
components/DAP/Include/: DAP.h  DAP_config.h  dap_strings.h
components/DAP/Source/: SW_DP.c  swd_host.c
components/Program/src/: bin_program.cpp  flash_accessor.cpp  swd_iface.cpp
components/USBIP/: usb_descriptor.h  usb_handle.c
components/esp_tinyusb/: Kconfig
components/esp_tinyusb/include/: tusb_config.h
main/: CMakeLists.txt  buzz.h  event_task.cpp  event_task.h  http_client.c  http_client.h  idf_component.yml  lvgl_demo_ui.c  main.cpp  main.h  msc_disk.c  ui_main.c  usb_bulk.c  usb_bulk.h  usb_dap_bulk.c  usb_desc.c  usb_desc.h
main/dap/: DAP_handle.c  dap_configuration.h
main/display/: app_button_c_api.cpp  app_button_c_api.h  app_display_c_api.cpp  app_display_c_api.h
main/hal/: buzz.c  power_measure.c  power_measure.h
main/lvgl_porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c
main/my_ui/: events_init.cpp  events_init.h  gui_guider.c  gui_guider.h  setup_scr_screen.c
main/my_ui/guider_fonts/: lv_font_montserratMedium_12.c  lv_font_montserratMedium_16.c  lv_font_montserratMedium_24.c
main/net/: kcp_server.c  tcp_netconn.c  tcp_server.c  usbip_server.c
main/prog/: prog_data.cpp  programmer.cpp
main/ui/: lvgl_demo_ui.c  ui_main.c  ui_main.h
main/usb/: usb_dap_bulk.c  usb_dap_bulk.h  usb_desc.c
main/web/: web_handler.cpp
