idf_component_register(SRCS 
                        "main.cpp" 
                        "dap/DAP_Handle.c"
                        "hal/buzz.c"
                        "hal/power_measure.c"
                        "usb/usb_desc.c"
                        "usb/usb_dap_bulk.c"
                        "usb/cdc_uart.c"
                        "usb/msc_disk.c"
                        "usb/usb_cdc_handler.c"
                        "web/web_handler.cpp"
                        "web/web_server.c"
                        "prog/prog_data.cpp"
                        "prog/prog_idle.cpp"
                        "prog/prog_online.cpp"
                        "prog/prog_offline.cpp"
                        "prog/prog.cpp"
                        "prog/programmer.cpp"
                        "net/tcp_netconn.c"
                        "net/tcp_server.c"
                        "net/usbip_server.c"
                        "net/kcp_server.c"

                        "ui/ui_main.c"
                        "ui/lvgl_demo_ui.c"
                        "hal/power_measure.c"
                        "hal/buzz.c"
                       INCLUDE_DIRS "." "dap" "hal" "usb" "web" "prog" "ui" "net"
                       EMBED_FILES "../html/root.html"
                        "../html/favicon.ico"
                        "../html/program.html"
                        "../html/webserial.html")          