idf_component_register(SRCS 
                        "main.cpp" 
                        "event_task.cpp"
                        "http_client.c"
                        "dap/DAP_handle.c"
                        "hal/buzz.c"
                        "hal/power_measure.c"
                        "web/web_handler.cpp"
                        "web/web_server.c"
                        "prog/prog_data.cpp"
                        "prog/prog_idle.cpp"
                        "prog/prog_online.cpp"
                        "prog/prog_offline.cpp"
                        "prog/prog.cpp"
                        "prog/programmer.cpp"
                        "net/tcp_netconn.c"
                        "net/tcp_server.c"
                        "net/usbip_server.c"
                        "net/kcp_server.c"

                        "ui/ui_main.c"
                        "ui/lvgl_demo_ui.c"
                        "hal/power_measure.c"
                        "hal/buzz.c"
                        "display/app_display_c_api.cpp"
                        "display/app_button_c_api.cpp"
                        "lvgl_porting/lv_port_disp.c"
                        "lvgl_porting/lv_port_fs.c"
                        "lvgl_porting/lv_port_indev.c"

                        "my_ui/custom.c"
                        "my_ui/events_init.cpp"
                        "my_ui/gui_guider.c"
                        "my_ui/setup_scr_screen.c"
                        "my_ui/widgets_init.c"
                        "my_ui/guider_fonts/lv_font_montserratMedium_12.c"
                        "my_ui/guider_fonts/lv_font_montserratMedium_16.c"
                       INCLUDE_DIRS "." "dap" "hal" "web" "prog" "ui" "net" "display" "lvgl_porting" "my_ui" "my_ui/guider_customer_fonts"
                       EMBED_FILES "../html/root.html"
                        "../html/favicon.ico"
                        "../html/program.html"
                        "../html/webserial.html")          